fixed spacing error

--- a/globals.css
+++ b/globals.css
@@ -1,4 +1,3 @@
-/*BASIC VARIABLE SETUP WITH MEDIA QUERIES*/
 
 :root{
     --colors-accent: #01579B;
@@ -11,6 +10,8 @@
     --spacer-lg: 1.2rem;
 
     --font-size-sm: 14px;
+
+    --font: "Verdana", sans-serif;
 }
 
 @media all and (min-width: 500px){
